--- a/CmsShop/Areas/Admin/Views/Pages/Index.cshtml
+++ b/CmsShop/Areas/Admin/Views/Pages/Index.cshtml
@@ -44,7 +44,7 @@ else
                     @Html.DisplayFor(modelItem => item.HasSidebar)
                 </td>
                 <td>
-                    @Html.ActionLink("Edytuj", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Edytuj", "EditPage", new { id = item.Id }) |
                     @Html.ActionLink("Szczegóły", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Usuń", "Delete", new { id = item.Id })
                 </td>
