--- a/CmsShop/Areas/Admin/Views/Pages/Index.cshtml
+++ b/CmsShop/Areas/Admin/Views/Pages/Index.cshtml
@@ -16,8 +16,8 @@
 }
 else
 {
-    <table class="table">
-        <tr>
+    <table class="table sorting" id="pages">
+        <tr class="home">
 
             <th>
                 Tytuł strony
@@ -33,7 +33,7 @@ else
 
         @foreach (var item in Model)
         {
-            <tr>
+            <tr id="id_@item.Id" class="@item.Slug">
                 <td>
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
@@ -59,12 +59,31 @@ else
 }
 
 @section scripts{
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
 
+    @*Sortowanie stron drag and drop*@
+    <script>
+        $(function () {
+            $("table#pages tbody").sortable({
+                items: "tr:not(.home)",
+                placeholder: "ui-state-highlight",
+                update: function () {
+                    var ids = $("table#pages tbody").sortable("serialize");
+                    var url = "/Admin/Pages/ReorderPages";
+                    $.post(url, ids, function (data) {
+
+                    })
+                }
+            })
+        });
+    </script>
+
+    @*Potwierdzenie usunięcia strony*@
     <script>
         $(function () {
             $("a.delete").click(function () {
                 if (!confirm("Potwierdzasz usunięcie strony"))
-                            return false;
+                    return false;
             });
         });
     </script>
