--- a/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
+++ b/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
@@ -34,7 +34,6 @@ else
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Name)
                     @Html.EditorFor(modelItem => item.Name, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 </td>
                 <td>
@@ -44,5 +43,26 @@ else
         }
 
     </table>
+}
+
+@section scripts{
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
+
+    <script>
+        $(function () {
+        /* Dodawanie nowej kategorii*/
+
+
+        /* Dodawanie nowej kategorii*/
+
+
+        /* Dodawanie nowej kategorii*/
+
+
+        }
+
+
+    </script>
+
 
 }
