--- a/CmsShop/Content/Site.css
+++ b/CmsShop/Content/Site.css
@@ -5,3 +5,12 @@
 .ui-state-highlight {
     border: 1px dashed #808080;
 }
+
+ span.ajax-text {
+     display: none;
+ }
+
+ div.new-cat {
+     margin-top: 30px;
+     position: relative;
+ }
