--- a/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
+++ b/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
@@ -50,19 +50,73 @@ else
 
     <script>
         $(function () {
-        /* Dodawanie nowej kategorii*/
+            /* Dodawanie nowej kategorii*/
+            var newCatA = $("a#newCata");
+            var newCatTextInput = $("#newCatName");
+            var ajaxText = $("span.ajaxtest");
+            var table = $("table#pages tbody");
+
+            newCatTextInput.keyup(function (e) {
+                if (e.keyCode == 13) {
+                    newCatA.click();
+                }
+            })
+
+            newCatA.click(function (e) {
+                e.preventDefault();
+
+                var catName = newCatTextInput.val();
+                if (catName.length < 2) {
+                    allert("Nazwa kategorii musi mieć conajmniej 2 znaki!");
+                    return false
+                }
+                ajaxText.show();
+
+                var url = "/admin/shop/AddNewCategory"
+                $.post(url, { catName: catName }, function (data) {
+                    var response = data.trim();
+
+                    if (response == "tytulzajety") {
+                        ajaxText.html("<span class = 'alert alert-danger'>Ten tytuł jest już zajęty!</span>")
+                        setTimeout(function () {
+                            ajaxText.fadeOut("fast", function () {
+                                ajaxText.html("<img src=/Content/img/ajax-loader.gif />");
+                            });
+                        }, 2000);
+                        return false;
+                    }
+                    else {
+                        if (!$("table#pages").lenth) {
+                            location.reload();
+                        }
+                        else {
+                            ajaxText.html("<span class = 'alert alert-success'>Kategoria została dodana.</span>")
+                            setTimeout(function () {
+                                ajaxText.fadeOut("fast", function () {
+                                    ajaxText.html("<img src=/Content/img/ajax-loader.gif />");
+                                });
+                            }, 2000);
+                            newCatTextInput.val("");
+
+                            var toAppend = $("table#pages tbody tr:last").clone();
+                            toAppend.attr("id", "id_" + data);
+                            toAppend.find("#item_Name").val(catName);
+                            toAppend.find("a.delete").attr("href", "/admin/shop/DeleteCategory/" + data);
+                            table.append(toAppend);
+                            table.sortable("refresh");
+                        }
+                    }
+                })
+            })
+
+            /* Dodawanie nowej kategorii*/
 
 
-        /* Dodawanie nowej kategorii*/
-
-
-        /* Dodawanie nowej kategorii*/
+            /* Dodawanie nowej kategorii*/
 
 
         }
 
 
     </script>
-
-
 }
