--- a/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
+++ b/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
@@ -7,9 +7,9 @@
 <h2>Sklep kategorie</h2>
 
 <div class="new-cat">
-    <input type="text" id="newCatName" />
+    <input type="text" id="newcatname" />
     <p>
-        <a href="#" id="newCata">Dodaj nową kategorię</a>
+        <a href="#" id="newcata">Dodaj Nową Kategorię</a>
         <span class="ajax-text">
             <img src="~/Content/img/ajax-loader.gif" />
         </span>
@@ -22,7 +22,7 @@
 }
 else
 {
-    <table class="table sorting" id="pages">
+    <table class="table sorting categories" id="pages">
         <tr class="home">
             <th>
                 @Html.DisplayNameFor(model => model.Name)
@@ -32,8 +32,9 @@ else
 
         @foreach (var item in Model)
         {
-            <tr>
+            <tr id="id_@item.Id">
                 <td>
+                    <div class="ajaxdivtd"></div>
                     @Html.EditorFor(modelItem => item.Name, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 </td>
                 <td>
@@ -45,61 +46,57 @@ else
     </table>
 }
 
-@section scripts{
+@section scripts {
+
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
 
     <script>
         $(function () {
-            /* Dodawanie nowej kategorii*/
-            var newCatA = $("a#newCata");
-            var newCatTextInput = $("#newCatName");
-            var ajaxText = $("span.ajaxtest");
+            /*
+            * Dodawanie nowej kategorii
+            */
+            var newCatA = $("a#newcata");
+            var newCatTextInput = $("#newcatname");
+            var ajaxText = $("span.ajax-text");
             var table = $("table#pages tbody");
-
             newCatTextInput.keyup(function (e) {
                 if (e.keyCode == 13) {
                     newCatA.click();
                 }
             })
-
             newCatA.click(function (e) {
                 e.preventDefault();
-
                 var catName = newCatTextInput.val();
                 if (catName.length < 2) {
-                    allert("Nazwa kategorii musi mieć conajmniej 2 znaki!");
+                    alert("Nazwa ketegorii musi mieć conajmniej 2 znaki!");
                     return false
                 }
                 ajaxText.show();
-
                 var url = "/admin/shop/AddNewCategory"
                 $.post(url, { catName: catName }, function (data) {
                     var response = data.trim();
-
                     if (response == "tytulzajety") {
-                        ajaxText.html("<span class = 'alert alert-danger'>Ten tytuł jest już zajęty!</span>")
+                        ajaxText.html("<span class='alert alert-danger'>Ten tytuł już jest zajęty!</span>")
                         setTimeout(function () {
                             ajaxText.fadeOut("fast", function () {
                                 ajaxText.html("<img src=/Content/img/ajax-loader.gif />");
                             });
                         }, 2000);
                         return false;
-                    }
-                    else {
-                        if (!$("table#pages").lenth) {
+                    } else {
+                        if (!$("table#pages").length) {
                             location.reload();
                         }
                         else {
-                            ajaxText.html("<span class = 'alert alert-success'>Kategoria została dodana.</span>")
+                            ajaxText.html("<span class='alert alert-success'>Kategoria została dodana</span>")
                             setTimeout(function () {
                                 ajaxText.fadeOut("fast", function () {
                                     ajaxText.html("<img src=/Content/img/ajax-loader.gif />");
                                 });
                             }, 2000);
                             newCatTextInput.val("");
-
                             var toAppend = $("table#pages tbody tr:last").clone();
-                            toAppend.attr("id", "id_" + data);
+                            toAppend.attr("id", "id_" + data)
                             toAppend.find("#item_Name").val(catName);
                             toAppend.find("a.delete").attr("href", "/admin/shop/DeleteCategory/" + data);
                             table.append(toAppend);
@@ -108,15 +105,70 @@ else
                     }
                 })
             })
-
-            /* Dodawanie nowej kategorii*/
-
-
-            /* Dodawanie nowej kategorii*/
-
-
-        }
-
-
+            ///////////////////////////////////////////////////////////////////////
+            /*
+            * Sortowanie Kategorii
+            */
+            $("table#pages tbody").sortable({
+                items: "tr:not(.home)",
+                placeholder: "ui-state-highlight",
+                update: function () {
+                    var ids = $("table#pages tbody").sortable("serialize");
+                    var url = "/Admin/Shop/ReorderCategories";
+                    $.post(url, ids, function (data) {
+                    });
+                }
+            });
+            ///////////////////////////////////////////////////////////////////////
+            /*
+            * Potwierdzeni Usuwania Kategorii
+            */
+            $("body").on("click", "a.delete", function () {
+                if (!confirm("Potwierdz usunięcie kategorii")) return false;
+            });
+            ///////////////////////////////////////////////////////////////////////
+            /*
+            * Zmiana Nazwy Kategorii
+            */
+            var orginalTextBoxValue;
+            $("table#pages input.text-box").dblclick(function () {
+                orginalTextBoxValue = $(this).val();
+                $(this).attr("readonly", false);
+            });
+            $("table#pages input.text-box").keyup(function (e) {
+                if (e.keyCode == 13) {
+                    $(this).blur();
+                }
+            });
+            $("table#pages input.text-box").blur(function () {
+                var $this = $(this);
+                var ajaxdiv = $this.parent().find(".ajaxdivtd");
+                var newCatName = $this.val();
+                var id = $this.parent().parent().attr("id").substring(3);
+                var url = "/admin/shop/RenameCategory";
+                if (newCatName.length < 2) {
+                    alert("Nazwa kategorii musi mieć conajmniej 2 znaki");
+                    $this.attr("readonly", true);
+                    return false;
+                }
+                $.post(url, { newCatName: newCatName, id: id }, function (data) {
+                    var response = data.trim();
+                    if (response == "tytulzajety") {
+                        $this.val(orginalTextBoxValue);
+                        ajaxdiv.html("<span class='alert alert-danger'>Ta kategoria jest zajęty!</span>").show();
+                    } else {
+                        ajaxdiv.html("<span class='alert alert-success'>Nazwa kategorii została zmieniona!</span>").show();
+                    }
+                    setTimeout(function () {
+                        ajaxdiv.fadeOut("fast", function () {
+                            ajaxdiv.html("");
+                        });
+                    }, 2000);
+                }).done(function () {
+                    $this.attr("readonly", true);
+                });
+            });
+            ///////////////////////////////////////////////////////////////////////
+        });
     </script>
 }
