Admin shop cz 7 rename categories in js

--- a/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
+++ b/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
@@ -155,7 +155,7 @@ else
                     var response = data.trim();
                     if (response == "tytulzajety") {
                         $this.val(orginalTextBoxValue);
-                        ajaxdiv.html("<span class='alert alert-danger'>Ta kategoria jest zajęty!</span>").show();
+                        ajaxdiv.html("<span class='alert alert-danger'>Ta kategoria jest zajęta!</span>").show();
                     } else {
                         ajaxdiv.html("<span class='alert alert-success'>Nazwa kategorii została zmieniona!</span>").show();
                     }
